# egui_graphs

./: Cargo.toml
examples/custom_draw/: Cargo.toml
examples/custom_draw/src/: main.rs
src/: computed.rs  graph.rs  graph_view.rs  lib.rs  transform.rs
src/draw/: custom.rs  drawer.rs  mod.rs  node.rs
src/elements/: edge.rs  edge_style.rs  node.rs  node_style.rs
src/events/: event.rs
