[package]
name = "egui_graphs_v1"
version = "0.15.0"
authors = ["Dmitrii Samsonov <blitzarx1@gmail.com>"]
license = "MIT"
homepage = "https://github.com/blitzarx1/egui_graphs"
repository = "https://github.com/blitzarx1/egui_graphs"
description = "Interactive graph visualization widget for rust powered by egui"
edition = "2021"

[dependencies]
egui = { version = "0.23", features = ["serde"] }
rand = "0.8"
petgraph = { version = "0.6", features = ["serde-1", "serde", "serde_derive"] }
crossbeam = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }

[features]
events = ["dep:crossbeam"]

[workspace]
members = ["examples/*"]
